2005-07-01  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Add just_say_yes() so that gnomevfssink will always overwrite
	files.  At the moment we do this check before starting the
	pipeline so this is safe.

2005-07-01  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/Makefile.am:
	* src/sj-extracting.c:
	* src/sj-main.c:
	* src/sj-play.[ch]:
	* src/sound-juicer.h:
	Merge the CD player branch.  Thanks to Ronald Bultje for his
	excellent work on this (#308755).

2005-06-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Change the genre combo to an entry.

	* src/sj-extracting.c:
	Update for combo->entry.

	* src/sj-extractor.c:
	Set the MusicBrainz tags last in case GStreamer doesn't support
	them, and set the genre from the album genre string.

	* src/sj-main.c:
	Set an entry completion based on a typical set of genres.

	* src/sj-structures.[ch]:
	Move the track-level genre enum to an album-level genre string.

	* src/sj-metadata-musicbrainz.c:
	Update for genre changes.

	* src/Makefile.am:
	* src/sj-genres.[ch]:
	Removed SjGenre, no longer needed.

2005-06-27  Ross Burton  <ross@burtonini.com>

	* acinclude.m4:
	Removed, GStreamer ships the element check macro now.

2005-06-25  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2005-06-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	  Add AC_PROG_LIBTOOL, thus now using libtool and thus allowing to
	  build against uninstalled dependencies.

2005-06-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Also fix the folder creation check.

2005-06-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix the overwrite check.

2005-06-22  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.2.

2005-06-22  Ross Burton  <ross@burtonini.com>

	The Great Gnome-Vfs Port.

	* data/sound-juicer.glade:
	Manually add the file system backend property to the file selector.
