@@ -5,6 +5,9 @@
 	files.  At the moment we do this check before starting the
 	pipeline so this is safe.
 
+	* src/sj-extracting.c:
+	Stop trying to manipulate a non-existant button.
+
 2005-07-01  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.glade:
